src/theme/default/css/default.css
/* ... */
/* Textareas */
select,
textarea,
input:not([type]),
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"] {
	color: var(--ww-text);
	background-color: var(--ww-bg-secondary);
	border: 1px solid var(--ww-border);
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
	transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
	display: inline-block;
	font-size: var(--ww-font-size);
	height: auto;
}

input[type=text]:hover,
input[type=search]:hover,
input[type=email]:hover,
input[type=password]:hover,
textarea:hover {
	border: 1px solid #93cee9;
}

input[type=text]:focus,
input[type=search]:focus,
input[type=email]:focus,
input[type=password]:focus,
textarea:focus {
	border: 1px solid #3daee9;
}

input[type=checkbox],
input[type=radio] {
	margin-right: 10px;
	margin-left: 8px;
}

input.captcha {
	width: 273px;
}

/* hides dummy field for bots and autocomplete */
input.verify { display: none; }

/* flexible input and textarea fields */
.cols-100 {
	width: 98%;
	max-width: 800px;
}
.cols-80 {
	width: 98%;
	max-width: 700px;
}
.cols-50 {
	width: 98%;
	max-width: 500px;
}
.cols-20 {
	width: 98%;
	max-width: 200px;
}

fieldset {
	padding: 10px;
}

body {
	font-family: var(--ww-font-sans-serif);
	font-size: var(--ww-font-size);
	line-height: 1.3;
	color: var(--ww-text);
	background-color: var(--ww-bg-primary);
	margin: 0;
}

img,
svg,
video {
	max-width: 100%;
	height: auto;
	border-width: 0;
	vertical-align: middle;
}

audio {
	min-width: 100%;
	max-width: 100%;
}

kbd {
	background-color: var(--ww-bg-secondary);
	border: 1px solid var(--ww-border);
	border-radius: 3px;
	box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px var(--ww-bg-secondary) inset;
	color: #333;
	display: inline-block;
	font-family: var(--ww-font-sans-serif);
	font-size: 11px;
	line-height: 1.4;
	margin: 0 0.1em;
	padding: 0.1em 0.6em;
	text-shadow: 0 1px 0 #fff;
	white-space: nowrap;
}

/* Accessibility */
.visuallyhidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

/* Hyperlinks */
a {
	color: var(--ww-a-normal);
	text-decoration: none;
}

a:link {
	color: var(--ww-a-normal);
}

a:visited {
	color: var(--ww-a-visited);
}

a:hover {
	color: var(--ww-a-hover);
	text-decoration: underline;
}

a:active {
	color: var(--ww-a-active);
}

a:target {
	background-color: var(--ww-a-target-bg);
}

.heading {
	clear: both;
}
.heading > a.self-link::before {
	content: "§";
	visibility: hidden;
}
.heading:hover > a.self-link::before {
	content: "§";
	visibility: visible;
	text-decoration: none;
}

header h1 > a.edit-section,
.heading > a.edit-section {
	visibility: hidden;
}
header h1:hover > a.edit-section,
.heading:hover > a.edit-section {
	visibility: visible;
	text-decoration: none;
}

a.self-link {
	height: 2em;
	float: left;
	margin-left: -15px;
	padding-right: 4px;
	padding-top: 4px;
}
[dir="rtl"] a.self-link {
	float: right;
	margin-right: -15px;
	padding-left: 4px;
}
a.self-link:hover {
	text-decoration: none;
}
.heading > a.self-link {
	font-size: 83%;
}

/* a.self-link::before {
	content: "¶"; 
} */

a.edit-section {
	float: right;
	font-size: small;
}
[dir="rtl"] a.edit-section {
	float: left;
}

.clearfix,
#mainwrapper {
	display: flow-root;
}

form input.submitinput {
	color: var(--ww-text);
}

#header-site,
#header-site h1,
#header-site a,
#header-site a:visited {
	font-size: 1.5rem;
	font-weight: normal;
	color: var(--ww-text-tertiary);
	text-decoration: none;
}

#header-files h1,
#header-comments h1 {
	font-size: var(--ww-font-size);
	line-height: 1.3;
	font-weight: normal;
	padding: 0;
	margin: 0;
}

.print {
	font-family: var(--ww-font-sans-serif);
	font-size: 0.75rem;
}

/** message boxes ************************************************************/
.msg {
	position: relative;
	margin: .6rem 0;
	padding: .625rem 2.5rem;
	overflow: auto;
}
.msg::before {
	bottom: 0;
	content: '';
	left: 0;
	position: absolute;
	top: 0;
	width: 2.5rem;
}
.msg::after {
	position: absolute;
	height: 1rem;
	width: 1rem;
	margin-top: 0;
	top: .6rem;
	left: .6rem;
}
[dir=rtl] .msg::after {
	right: .6rem;
}

.error {
	background: #f8d4cc;
	color: #c33;
	font-weight: bold;
}
.error::after {
	content: url('./../icon/light/cross.svg') " ";
}

.comment-info {
	color: gray;
	border: 1px solid #d5d9e6;
}
.msg.comment-info::after {
	content: url('./../icon/light/comment.svg') " ";
}

.disabled {
	background: #ededed;
	border: 1px solid #cdcdcd;
	font-style: italic;
}
.msg.disabled::after {
	content: url('./../icon/light/info.svg') " ";
}

.revision-info {
	background: #f4fbff;
	border: 1px solid #d5d9e6;
	color: #c33;
	font-weight: bold;
}
.msg.revision-info::after {
	content: url('./../icon/light/revisions.svg') " ";
}

.revision-info button {
	float: left;
	margin-right: 5px;
}

.note {
	background: #f4fbff;
	border: 1px solid #d5d9e6;
	color: #c33;
	font-weight: bold;
}
.msg.note::after {
	content: url('./../icon/light/info.svg') " ";
}

.notice {
	background-color: #ffffef;
	border: 1px dotted #dda;
}
.msg.notice::after {
	content: url('./../icon/light/info.svg') " ";
}

.section-info {
	border: 1px solid #cdcdcd;
	color: gray;
}
.msg.section-info::after {
	content: url('./../icon/light/section.svg') " ";
}

.success {
	background: #e9ffd9;
	color: #008000;
	font-weight: bold;
}
.msg.success::after {
	content: url('./../icon/light/tick.svg') " ";
}

.warning {
	color: #d33;
	background: var(--ww-bg-primary);
	border: 1px dotted #d893a1;
	font-weight: bold;
}
.msg.warning::after {
	content: url('./../icon/light/warning.svg') " ";
}

.hint {
	color: #000;
	border: 1px solid #fe6;
	background: #ffd;
}
.msg.hint::after {
	content: url('./../icon/light/important.svg') " ";
}

.rev-overflow {
	overflow: visible;
}
/* ... */

